added cpack config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,5 @@ if(BUILD_TESTS)
   target_link_libraries(check ${PROJECT_NAME} gtest_main)
   add_test(NAME check COMMAND check)
 endif()
+
+include(CPackConfig.cmake)
